test/fail/suggest-long.mo
import Prim "mo:⛔";

Prim.stableM;
